--- a/index.html
+++ b/index.html
@@ -3,18 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nagarjun - Personal Portfolio</title>
+    <title>Nagarjun - Portfolio</title>
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- AOS Animation Library -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <style>
+        :root {
+            --primary-color: #2563eb;
+            --secondary-color: #1e40af;
+            --background-color: #f8fafc;
+            --text-color: #334155;
+            --light-text: #64748b;
+        }
+
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Arial', sans-serif;
+            font-family: 'Poppins', sans-serif;
         }
 
         body {
             line-height: 1.6;
-            color: #333;
+            color: var(--text-color);
+            background-color: var(--background-color);
         }
 
         .container {
@@ -23,16 +38,34 @@
             padding: 0 20px;
         }
 
+        /* Header Styles */
         header {
-            background: #2c3e50;
+            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
             color: white;
-            padding: 60px 0;
+            padding: 100px 0;
             text-align: center;
+            clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
         }
 
+        .header-content h1 {
+            font-size: 3.5rem;
+            margin-bottom: 20px;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+        }
+
+        .header-content p {
+            font-size: 1.2rem;
+            opacity: 0.9;
+        }
+
+        /* Navigation */
         nav {
-            background: #34495e;
-            padding: 15px 0;
+            background: white;
+            padding: 20px 0;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            position: sticky;
+            top: 0;
+            z-index: 1000;
         }
 
         nav ul {
@@ -42,37 +75,68 @@
 
         nav ul li {
             display: inline;
-            margin: 0 15px;
+            margin: 0 20px;
         }
 
         nav ul li a {
-            color: white;
+            color: var(--text-color);
             text-decoration: none;
+            font-weight: 500;
+            transition: color 0.3s ease;
         }
 
+        nav ul li a:hover {
+            color: var(--primary-color);
+        }
+
+        /* Sections */
         section {
-            padding: 60px 0;
+            padding: 80px 0;
         }
 
         .section-title {
             text-align: center;
-            margin-bottom: 40px;
+            margin-bottom: 60px;
+            position: relative;
         }
 
+        .section-title::after {
+            content: '';
+            display: block;
+            width: 50px;
+            height: 3px;
+            background: var(--primary-color);
+            margin: 20px auto;
+        }
+
+        /* Skills Section */
         .skills-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 20px;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 30px;
             margin-top: 20px;
         }
 
         .skill-card {
-            background: #f7f9fc;
-            padding: 20px;
-            border-radius: 5px;
+            background: white;
+            padding: 30px;
+            border-radius: 15px;
             text-align: center;
+            transition: transform 0.3s ease;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
         }
 
+        .skill-card:hover {
+            transform: translateY(-10px);
+        }
+
+        .skill-card i {
+            font-size: 2.5rem;
+            color: var(--primary-color);
+            margin-bottom: 20px;
+        }
+
+        /* Projects Section */
         .projects-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -81,56 +145,143 @@
         }
 
         .project-card {
-            background: #f7f9fc;
-            padding: 20px;
-            border-radius: 5px;
+            background: white;
+            border-radius: 15px;
+            overflow: hidden;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
         }
 
-        footer {
-            background: #2c3e50;
-            color: white;
-            text-align: center;
-            padding: 20px 0;
-            margin-top: 40px;
+        .project-image {
+            width: 100%;
+            height: 200px;
+            background-size: cover;
+            background-position: center;
+        }
+
+        .project-content {
+            padding: 20px;
+        }
+
+        .project-card h3 {
+            color: var(--primary-color);
+            margin-bottom: 10px;
+        }
+
+        /* Contact Section */
+        .contact-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 40px;
+            align-items: center;
         }
 
         .contact-info {
-            text-align: center;
+            text-align: left;
         }
 
+        .contact-form {
+            background: white;
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        }
+
+        .form-group {
+            margin-bottom: 20px;
+        }
+
+        .form-group input,
+        .form-group textarea {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            font-size: 1rem;
+        }
+
+        .btn {
+            background: var(--primary-color);
+            color: white;
+            padding: 12px 30px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background 0.3s ease;
+        }
+
+        .btn:hover {
+            background: var(--secondary-color);
+        }
+
+        /* Social Links */
         .social-links {
-            margin-top: 20px;
+            margin-top: 30px;
         }
 
         .social-links a {
+            display: inline-block;
+            width: 40px;
+            height: 40px;
+            line-height: 40px;
+            text-align: center;
+            background: var(--primary-color);
+            color: white;
+            border-radius: 50%;
             margin: 0 10px;
-            color: #2c3e50;
-            text-decoration: none;
+            transition: transform 0.3s ease;
+        }
+
+        .social-links a:hover {
+            transform: translateY(-5px);
+        }
+
+        /* Footer */
+        footer {
+            background: var(--primary-color);
+            color: white;
+            text-align: center;
+            padding: 30px 0;
+            margin-top: 40px;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            .header-content h1 {
+                font-size: 2.5rem;
+            }
+
+            nav ul li {
+                margin: 0 10px;
+            }
         }
     </style>
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="container header-content" data-aos="fade-up">
             <h1>Nagarjun</h1>
-            <p>Software Developer | Tech Enthusiast</p>
+            <p>Full Stack Developer & Tech Innovator</p>
         </div>
     </header>
 
     <nav>
         <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about"><i class="fas fa-user"></i> About</a></li>
+            <li><a href="#skills"><i class="fas fa-code"></i> Skills</a></li>
+            <li><a href="#projects"><i class="fas fa-project-diagram"></i> Projects</a></li>
+            <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
         </ul>
     </nav>
 
     <section id="about">
-        <div class="container">
+        <div class="container" data-aos="fade-up">
             <h2 class="section-title">About Me</h2>
-            <p>Hello! I'm Nagarjun, a passionate software developer with a keen interest in building innovative solutions. 
-               I love working with modern technologies and am always eager to learn new things.</p>
+            <p style="text-align: center; max-width: 800px; margin: 0 auto;">
+                I'm a passionate Full Stack Developer with expertise in building scalable web applications.
+                With a strong foundation in both frontend and backend technologies, I love creating innovative solutions
+                that make a difference. When I'm not coding, you'll find me exploring new technologies and contributing
+                to open-source projects.
+            </p>
         </div>
     </section>
 
@@ -138,17 +289,23 @@
         <div class="container">
             <h2 class="section-title">Skills</h2>
             <div class="skills-grid">
-                <div class="skill-card">
-                    <h3>Frontend Development</h3>
-                    <p>HTML, CSS, JavaScript</p>
+                <div class="skill-card" data-aos="flip-left">
+                    <i class="fas fa-laptop-code"></i>
+                    <h3>Frontend</h3>
+                    <p>HTML5, CSS3, JavaScript</p>
+                    <p>React, Vue.js, Angular</p>
                 </div>
-                <div class="skill-card">
-                    <h3>Backend Development</h3>
-                    <p>Python, Node.js, SQL</p>
+                <div class="skill-card" data-aos="flip-left" data-aos-delay="100">
+                    <i class="fas fa-server"></i>
+                    <h3>Backend</h3>
+                    <p>Node.js, Python, Java</p>
+                    <p>Express, Django, Spring</p>
                 </div>
-                <div class="skill-card">
-                    <h3>Tools & Technologies</h3>
-                    <p>Git, Docker, AWS</p>
+                <div class="skill-card" data-aos="flip-left" data-aos-delay="200">
+                    <i class="fas fa-database"></i>
+                    <h3>Database</h3>
+                    <p>MongoDB, PostgreSQL</p>
+                    <p>Redis, MySQL</p>
                 </div>
             </div>
         </div>
@@ -156,19 +313,31 @@
 
     <section id="projects">
         <div class="container">
-            <h2 class="section-title">Projects</h2>
+            <h2 class="section-title">Featured Projects</h2>
             <div class="projects-grid">
-                <div class="project-card">
-                    <h3>Project 1</h3>
-                    <p>Description of your first project goes here.</p>
+                <div class="project-card" data-aos="fade-up">
+                    <div class="project-image" style="background-image: url('https://via.placeholder.com/300x200')"></div>
+                    <div class="project-content">
+                        <h3>Project One</h3>
+                        <p>A full-stack web application built with React and Node.js</p>
+                        <a href="#" class="btn">View Project</a>
+                    </div>
                 </div>
-                <div class="project-card">
-                    <h3>Project 2</h3>
-                    <p>Description of your second project goes here.</p>
+                <div class="project-card" data-aos="fade-up" data-aos-delay="100">
+                    <div class="project-image" style="background-image: url('https://via.placeholder.com/300x200')"></div>
+                    <div class="project-content">
+                        <h3>Project Two</h3>
+                        <p>Mobile-first responsive website with modern animations</p>
+                        <a href="#" class="btn">View Project</a>
+                    </div>
                 </div>
-                <div class="project-card">
-                    <h3>Project 3</h3>
-                    <p>Description of your third project goes here.</p>
+                <div class="project-card" data-aos="fade-up" data-aos-delay="200">
+                    <div class="project-image" style="background-image: url('https://via.placeholder.com/300x200')"></div>
+                    <div class="project-content">
+                        <h3>Project Three</h3>
+                        <p>API development and integration project</p>
+                        <a href="#" class="btn">View Project</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -176,13 +345,32 @@
 
     <section id="contact">
         <div class="container">
-            <h2 class="section-title">Contact Me</h2>
-            <div class="contact-info">
-                <p>Email: your.email@example.com</p>
-                <div class="social-links">
-                    <a href="https://github.com/yourusername" target="_blank">GitHub</a>
-                    <a href="https://linkedin.com/in/yourusername" target="_blank">LinkedIn</a>
-                    <a href="https://twitter.com/yourusername" target="_blank">Twitter</a>
+            <h2 class="section-title">Get In Touch</h2>
+            <div class="contact-container">
+                <div class="contact-info" data-aos="fade-right">
+                    <h3>Contact Information</h3>
+                    <p><i class="fas fa-envelope"></i> email@example.com</p>
+                    <p><i class="fas fa-phone"></i> +1 234 567 890</p>
+                    <p><i class="fas fa-map-marker-alt"></i> City, Country</p>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-github"></i></a>
+                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                    </div>
+                </div>
+                <div class="contact-form" data-aos="fade-left">
+                    <form>
+                        <div class="form-group">
+                            <input type="text" placeholder="Your Name" required>
+                        </div>
+                        <div class="form-group">
+                            <input type="email" placeholder="Your Email" required>
+                        </div>
+                        <div class="form-group">
+                            <textarea rows="5" placeholder="Your Message" required></textarea>
+                        </div>
+                        <button type="submit" class="btn">Send Message</button>
+                    </form>
                 </div>
             </div>
         </div>
@@ -193,5 +381,14 @@
             <p>&copy; 2023 Nagarjun. All rights reserved.</p>
         </div>
     </footer>
+
+    <!-- AOS Animation Script -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            duration: 1000,
+            once: true
+        });
+    </script>
 </body>
 </html>
