--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -37,358 +36,130 @@
             margin: 0 auto;
             padding: 0 20px;
         }
+        [Previous HTML structure remains the same until the header section]
 
-        /* Header Styles */
-        header {
-            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-            color: white;
-            padding: 100px 0;
-            text-align: center;
-            clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-        }
+<header>
+    <div class="container header-content" data-aos="fade-up">
+        <h1>Nagarjun Gururaj</h1>
+        <p>Lead Data Scientist at Siemens | AI/ML Expert</p>
+        <p class="header-subtitle">Deep Learning • Computer Vision • Natural Language Processing • Generative AI</p>
+    </div>
+</header>
 
-        .header-content h1 {
-            font-size: 3.5rem;
-            margin-bottom: 20px;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
-        }
+<section id="about">
+    <div class="container" data-aos="fade-up">
+        <h2 class="section-title">About Me</h2>
+        <p style="text-align: center; max-width: 800px; margin: 0 auto;">
+            I'm a Lead Data Scientist at Siemens, specializing in computer vision, deep learning, and GenAI. 
+            With a strong focus on bridging research with practical industrial solutions, I drive scalable AI 
+            implementations for industrial automation and smart manufacturing. My expertise spans across 
+            developing innovative solutions for image analytics, anomaly detection, and generative AI applications.
+        </p>
+    </div>
+</section>
 
-        .header-content p {
-            font-size: 1.2rem;
-            opacity: 0.9;
-        }
-
-        /* Navigation */
-        nav {
-            background: white;
-            padding: 20px 0;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
-
-        nav ul {
-            list-style: none;
-            text-align: center;
-        }
-
-        nav ul li {
-            display: inline;
-            margin: 0 20px;
-        }
-
-        nav ul li a {
-            color: var(--text-color);
-            text-decoration: none;
-            font-weight: 500;
-            transition: color 0.3s ease;
-        }
-
-        nav ul li a:hover {
-            color: var(--primary-color);
-        }
-
-        /* Sections */
-        section {
-            padding: 80px 0;
-        }
-
-        .section-title {
-            text-align: center;
-            margin-bottom: 60px;
-            position: relative;
-        }
-
-        .section-title::after {
-            content: '';
-            display: block;
-            width: 50px;
-            height: 3px;
-            background: var(--primary-color);
-            margin: 20px auto;
-        }
-
-        /* Skills Section */
-        .skills-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 30px;
-            margin-top: 20px;
-        }
-
-        .skill-card {
-            background: white;
-            padding: 30px;
-            border-radius: 15px;
-            text-align: center;
-            transition: transform 0.3s ease;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-        }
-
-        .skill-card:hover {
-            transform: translateY(-10px);
-        }
-
-        .skill-card i {
-            font-size: 2.5rem;
-            color: var(--primary-color);
-            margin-bottom: 20px;
-        }
-
-        /* Projects Section */
-        .projects-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 30px;
-            margin-top: 20px;
-        }
-
-        .project-card {
-            background: white;
-            border-radius: 15px;
-            overflow: hidden;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-        }
-
-        .project-image {
-            width: 100%;
-            height: 200px;
-            background-size: cover;
-            background-position: center;
-        }
-
-        .project-content {
-            padding: 20px;
-        }
-
-        .project-card h3 {
-            color: var(--primary-color);
-            margin-bottom: 10px;
-        }
-
-        /* Contact Section */
-        .contact-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 40px;
-            align-items: center;
-        }
-
-        .contact-info {
-            text-align: left;
-        }
-
-        .contact-form {
-            background: white;
-            padding: 30px;
-            border-radius: 15px;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-        }
-
-        .form-group {
-            margin-bottom: 20px;
-        }
-
-        .form-group input,
-        .form-group textarea {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            font-size: 1rem;
-        }
-
-        .btn {
-            background: var(--primary-color);
-            color: white;
-            padding: 12px 30px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background 0.3s ease;
-        }
-
-        .btn:hover {
-            background: var(--secondary-color);
-        }
-
-        /* Social Links */
-        .social-links {
-            margin-top: 30px;
-        }
-
-        .social-links a {
-            display: inline-block;
-            width: 40px;
-            height: 40px;
-            line-height: 40px;
-            text-align: center;
-            background: var(--primary-color);
-            color: white;
-            border-radius: 50%;
-            margin: 0 10px;
-            transition: transform 0.3s ease;
-        }
-
-        .social-links a:hover {
-            transform: translateY(-5px);
-        }
-
-        /* Footer */
-        footer {
-            background: var(--primary-color);
-            color: white;
-            text-align: center;
-            padding: 30px 0;
-            margin-top: 40px;
-        }
-
-        /* Responsive Design */
-        @media (max-width: 768px) {
-            .header-content h1 {
-                font-size: 2.5rem;
-            }
-
-            nav ul li {
-                margin: 0 10px;
-            }
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <div class="container header-content" data-aos="fade-up">
-            <h1>Nagarjun</h1>
-            <p>Full Stack Developer & Tech Innovator</p>
-        </div>
-    </header>
-
-    <nav>
-        <ul>
-            <li><a href="#about"><i class="fas fa-user"></i> About</a></li>
-            <li><a href="#skills"><i class="fas fa-code"></i> Skills</a></li>
-            <li><a href="#projects"><i class="fas fa-project-diagram"></i> Projects</a></li>
-            <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
-        </ul>
-    </nav>
-
-    <section id="about">
-        <div class="container" data-aos="fade-up">
-            <h2 class="section-title">About Me</h2>
-            <p style="text-align: center; max-width: 800px; margin: 0 auto;">
-                I'm a passionate Full Stack Developer with expertise in building scalable web applications.
-                With a strong foundation in both frontend and backend technologies, I love creating innovative solutions
-                that make a difference. When I'm not coding, you'll find me exploring new technologies and contributing
-                to open-source projects.
-            </p>
-        </div>
-    </section>
-
-    <section id="skills">
-        <div class="container">
-            <h2 class="section-title">Skills</h2>
-            <div class="skills-grid">
-                <div class="skill-card" data-aos="flip-left">
-                    <i class="fas fa-laptop-code"></i>
-                    <h3>Frontend</h3>
-                    <p>HTML5, CSS3, JavaScript</p>
-                    <p>React, Vue.js, Angular</p>
-                </div>
-                <div class="skill-card" data-aos="flip-left" data-aos-delay="100">
-                    <i class="fas fa-server"></i>
-                    <h3>Backend</h3>
-                    <p>Node.js, Python, Java</p>
-                    <p>Express, Django, Spring</p>
-                </div>
-                <div class="skill-card" data-aos="flip-left" data-aos-delay="200">
-                    <i class="fas fa-database"></i>
-                    <h3>Database</h3>
-                    <p>MongoDB, PostgreSQL</p>
-                    <p>Redis, MySQL</p>
-                </div>
+<section id="skills">
+    <div class="container">
+        <h2 class="section-title">Expertise</h2>
+        <div class="skills-grid">
+            <div class="skill-card" data-aos="flip-left">
+                <i class="fas fa-brain"></i>
+                <h3>AI/ML</h3>
+                <p>Deep Learning</p>
+                <p>Computer Vision</p>
+                <p>Generative AI</p>
+                <p>crewai</p>
+                <p>Google Gemini</p>
+            </div>
+            <div class="skill-card" data-aos="flip-left" data-aos-delay="100">
+                <i class="fas fa-code"></i>
+                <h3>Technologies</h3>
+                <p>Python</p>
+                <p>TensorRT</p>
+                <p>OpenVINO</p>
+                <p>Azure ML</p>
+                <p>PySpark</p>
+            </div>
+            <div class="skill-card" data-aos="flip-left" data-aos-delay="200">
+                <i class="fas fa-language"></i>
+                <h3>Languages</h3>
+                <p>English (Professional)</p>
+                <p>Hindi (Professional)</p>
+                <p>Kannada (Native)</p>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
-    <section id="projects">
-        <div class="container">
-            <h2 class="section-title">Featured Projects</h2>
-            <div class="projects-grid">
-                <div class="project-card" data-aos="fade-up">
-                    <div class="project-image" style="background-image: url('https://via.placeholder.com/300x200')"></div>
-                    <div class="project-content">
-                        <h3>Project One</h3>
-                        <p>A full-stack web application built with React and Node.js</p>
-                        <a href="#" class="btn">View Project</a>
-                    </div>
-                </div>
-                <div class="project-card" data-aos="fade-up" data-aos-delay="100">
-                    <div class="project-image" style="background-image: url('https://via.placeholder.com/300x200')"></div>
-                    <div class="project-content">
-                        <h3>Project Two</h3>
-                        <p>Mobile-first responsive website with modern animations</p>
-                        <a href="#" class="btn">View Project</a>
-                    </div>
-                </div>
-                <div class="project-card" data-aos="fade-up" data-aos-delay="200">
-                    <div class="project-image" style="background-image: url('https://via.placeholder.com/300x200')"></div>
-                    <div class="project-content">
-                        <h3>Project Three</h3>
-                        <p>API development and integration project</p>
-                        <a href="#" class="btn">View Project</a>
-                    </div>
-                </div>
+<section id="experience">
+    <div class="container">
+        <h2 class="section-title">Professional Experience</h2>
+        <div class="experience-grid">
+            <div class="experience-card" data-aos="fade-up">
+                <h3>Siemens</h3>
+                <h4>Lead Data Scientist</h4>
+                <p class="date">May 2025 - Present</p>
+                <ul>
+                    <li>Developed Image Analytics MVP with 95% accuracy for liquid fill level detection</li>
+                    <li>Led anomaly detection projects for substation sensor data</li>
+                    <li>Created PropGenAI - GenAI based multi-Agents Project Proposal Generator</li>
+                </ul>
+            </div>
+            <div class="experience-card" data-aos="fade-up">
+                <h3>Mindtree</h3>
+                <h4>Module Lead</h4>
+                <p class="date">August 2021 - September 2022</p>
+                <ul>
+                    <li>Led computer vision project for on-shelf product identification</li>
+                    <li>Developed anomaly detection systems using Azure ML</li>
+                </ul>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
-    <section id="contact">
-        <div class="container">
-            <h2 class="section-title">Get In Touch</h2>
-            <div class="contact-container">
-                <div class="contact-info" data-aos="fade-right">
-                    <h3>Contact Information</h3>
-                    <p><i class="fas fa-envelope"></i> email@example.com</p>
-                    <p><i class="fas fa-phone"></i> +1 234 567 890</p>
-                    <p><i class="fas fa-map-marker-alt"></i> City, Country</p>
-                    <div class="social-links">
-                        <a href="#"><i class="fab fa-github"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                    </div>
-                </div>
-                <div class="contact-form" data-aos="fade-left">
-                    <form>
-                        <div class="form-group">
-                            <input type="text" placeholder="Your Name" required>
-                        </div>
-                        <div class="form-group">
-                            <input type="email" placeholder="Your Email" required>
-                        </div>
-                        <div class="form-group">
-                            <textarea rows="5" placeholder="Your Message" required></textarea>
-                        </div>
-                        <button type="submit" class="btn">Send Message</button>
-                    </form>
-                </div>
+<section id="publications">
+    <div class="container">
+        <h2 class="section-title">Publications</h2>
+        <div class="publications-grid">
+            <div class="publication-card" data-aos="fade-up">
+                <h3>Approximate Deep Neural Networks for Embedded Platforms</h3>
+            </div>
+            <div class="publication-card" data-aos="fade-up">
+                <h3>InnovFaceNet: Deep Face Recognition for Industrial Environments</h3>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
-    <footer>
-        <div class="container">
-            <p>&copy; 2023 Nagarjun. All rights reserved.</p>
+<section id="certifications">
+    <div class="container">
+        <h2 class="section-title">Certifications</h2>
+        <div class="certifications-grid">
+            <div class="certification-card" data-aos="fade-up">
+                <ul>
+                    <li>Microsoft Certified Azure Fundamentals</li>
+                    <li>Introduction to Large Language Models</li>
+                    <li>Introduction to Generative AI</li>
+                    <li>Hands-On Pyspark for Big Data Analysis</li>
+                </ul>
+            </div>
         </div>
-    </footer>
+    </div>
+</section>
 
-    <!-- AOS Animation Script -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init({
-            duration: 1000,
-            once: true
-        });
-    </script>
-</body>
-</html>
+<section id="contact">
+    <div class="container">
+        <h2 class="section-title">Get In Touch</h2>
+        <div class="contact-info" data-aos="fade-up">
+            <p><i class="fas fa-envelope"></i> nagarjun.gururaj@gmail.com</p>
+            <p><i class="fas fa-map-marker-alt"></i> Bengaluru, Karnataka, India</p>
+            <div class="social-links">
+                <a href="https://www.linkedin.com/in/nagarjungururaj" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://flowcv.me/nagarjungururaj" target="_blank"><i class="fas fa-globe"></i></a>
+            </div>
+        </div>
+    </div>
+</section>
+
+[Rest of the HTML structure remains the same]
